; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/team/extr_team.c_team_mcast_rejoin_count_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/team/extr_team.c_team_mcast_rejoin_count_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.team = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.team_gsetter_ctx = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.team*, %struct.team_gsetter_ctx*)* @team_mcast_rejoin_count_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @team_mcast_rejoin_count_set(%struct.team* %0, %struct.team_gsetter_ctx* %1) #0 {
  %3 = alloca %struct.team*, align 8
  %4 = alloca %struct.team_gsetter_ctx*, align 8
  store %struct.team* %0, %struct.team** %3, align 8
  store %struct.team_gsetter_ctx* %1, %struct.team_gsetter_ctx** %4, align 8
  %5 = load %struct.team_gsetter_ctx*, %struct.team_gsetter_ctx** %4, align 8
  %6 = getelementptr inbounds %struct.team_gsetter_ctx, %struct.team_gsetter_ctx* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.team*, %struct.team** %3, align 8
  %10 = getelementptr inbounds %struct.team, %struct.team* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
